partner-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: partner-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: partner
  template:
    metadata:
      labels:
        app: partner
    spec:
      containers:
        - name: partner
          image: cris626/partner:v1
---
apiVersion: v1
kind: Service
metadata:
  name: partner-srv
spec:
  selector:
    app: partner
  ports:
    - name: partner
      protocol: TCP
      port: 4001
      targetPort: 4001
