sewerage-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sewerage-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sewerage
  template:
    metadata:
      labels:
        app: sewerage
    spec:
      containers:
        - name: sewerage
          image: cris626/sewerage:v1
---
apiVersion: v1
kind: Service
metadata:
  name: sewerage-srv
spec:
  selector:
    app: sewerage
  ports:
    - name: sewerage
      protocol: TCP
      port: 4003
      targetPort: 4003
