water-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: water-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: water
  template:
    metadata:
      labels:
        app: water
    spec:
      containers:
        - name: water
          image: cris626/water:v1
---
apiVersion: v1
kind: Service
metadata:
  name: water-srv
spec:
  selector:
    app: water
  ports:
    - name: water
      protocol: TCP
      port: 4002
      targetPort: 4002
