ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: client.com
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 4000
          - path: /api/partner/?(.*)
            pathType: Prefix
            backend:
              service:
                name: partner-srv
                port: 
                  number: 4001
          - path: /api/water/?(.*)
            pathType: Prefix
            backend:
              service:
                name: water-srv
                port: 
                  number: 4002
          - path: /api/sewerage/?(.*)
            pathType: Prefix
            backend:
              service:
                name: sewerage-srv
                port: 
                  number: 4003
          - path: /api/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port: 
                  number: 4004
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port: 
                  number: 3000
